updated breadcrumb constructor to be more robust. updated doco and kitchen sink examples to reflect changes.

--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -414,26 +414,45 @@
     </div>
   </div>
 </div>
-<br>
 <!-- breadcrumb -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
-    <nav aria-label="uq-breadcrumb">
-      <ol class="uq-breadcrumb" itemscope="" itemtype="https://schema.org/BreadcrumbList">
+    <nav class="uq-breadcrumb uq-breadcrumb--truncated" aria-label="breadcrumb">
+      <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
         <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-          <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
+          <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
           <meta itemprop="position" content="1">
         </li>
         <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-          <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
+          <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/information-and-services">Level one</a>
           <meta itemprop="position" content="2">
         </li>
         <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-          <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services/human-resources">Human resources</a>
+          <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/information-and-services/internet-and-wifi">Level two</a>
           <meta itemprop="position" content="3">
         </li>
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+          <a class="uq-breadcrumb__link" itemprop="item" title="A really long page title" href="#">A really long page title</a>
+          <meta itemprop="position" content="5">
+        </li>
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+          <a class="uq-breadcrumb__link" itemprop="item" title="Another really long title" href="#">Another really long title</a>
+          <meta itemprop="position" content="6">
+        </li>
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+          <a class="uq-breadcrumb__link" itemprop="item" title="Bachelor of Business with a Major in Management or Finance" href="#">Bachelor of Business with a Major in Management or Finance</a>
+          <meta itemprop="position" content="7">
+        </li>
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+          <a class="uq-breadcrumb__link" itemprop="item" title="Major Leadership and Management Science" href="#">Major Leadership and Management Science</a>
+          <meta itemprop="position" content="8">
+        </li>
+        <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+          Welcome to the Kitchen Sink page
+          <meta itemprop="position" content="9">
+        </li>
       </ol>
-    </nav>    
+    </nav>
   </div>
 </div>
 <br/>
