--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -17,54 +17,79 @@
   &__list {
     margin: 0;
     padding: 0;
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
   }
 
 
   // Breadcrumb item
   &__item {
-    display: none;
     background-image: url(icon.get-icon(
       "standard--chevron-left-sml",
       core.$uq-neutral-dark80
     ));
     background-position: left 0.2rem center;
     padding: 0 0 0 1.5rem;
-    
-    &:nth-last-child(2) {
-        display: inline-block;
-    }
     margin: 0;
     font-size: core.$font-size-s;
     color: core.$uq-neutral-dark40;
     background-repeat: no-repeat;
     background-size: 1rem;
+    display: none;
+
+    &:nth-last-child(2) {
+      display: flex;
+
+      @media #{core.$screen-md-down} {
+        .uq-breadcrumb__link {
+          max-width: none;
+        }
+      }
+    }
+    
 
     @media #{core.$screen-md-up} {
-      display: inline-block;
-      padding: 0 1.5rem 0 0;
-      word-wrap: break-word;
+      display: flex;   
       background-image: url(icon.get-icon(
         "standard--chevron-right-sml",
         core.$uq-neutral-dark80
       ));
-      background-position: right 0.1rem center;
+
+      &:first-of-type {
+        background: none;
+        padding-left: 0;
+      }
 
       &:last-of-type {
-        background: none;
+        .uq-breadcrumb__link {
+          max-width: none;
+        }
       }
+      
     }
 
-    
+    &--hidden {
+     display: none;
+    }
+  }
 
+  &__expand {
+    cursor: pointer;
   }
 
   // Breadcrumb link
   &__link {
     text-decoration: underline;
     color: core.$uq-neutral-dark40;
+    max-width: 9rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &:hover {
 
     }
   }
+  
 }
