--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
@@ -1,16 +1,20 @@
 <nav class="uq-breadcrumb" aria-label="breadcrumb">
   <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
     <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
+      <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
       <meta itemprop="position" content="1">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
+      <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/level-one">Level one</a>
       <meta itemprop="position" content="2">
     </li>
     <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      Internet and wifi
+      <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/level-one/level-two">Level two</a>
       <meta itemprop="position" content="3">
+    </li>
+    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+      Current page
+      <meta itemprop="position" content="4">
     </li>
   </ol>
 </nav>
