updated spacing doco

--- a/packages/storybook-html/stories/components/core/_space.scss
+++ b/packages/storybook-html/stories/components/core/_space.scss
@@ -66,6 +66,11 @@
   height: $space-uuuul;
 }
 
+.uqds-space-uuuuul {
+  width: $space-uuuuul;
+  height: $space-uuuuul;
+}
+
 /* Container example */
 .uqds-container {
   background-color: rgba($uq-black, 0.75);
