add kitchen sink files for afformentioned change

--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -323,7 +323,88 @@
     </div>
 
 
+<!-- alert -->
+<div class="uq-alert uq-alert--info" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>
+  </div>
+</div>
+<div class="uq-alert uq-alert--success" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a success alert</p>
+  </div>
+</div>
+<div class="uq-alert uq-alert--warning" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a warning alert</p>
+  </div>
+</div>
+<div class="uq-alert uq-alert--error" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a error alert</p>
+  </div>
+</div>
+<br />
 
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>    
+    <a href="#" title="Link" class="uq-button--inline">Link</a>
+  </div>
+</div>
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <p>This is a default info alert</p>    
+    <a href="#" title="Button" class="uq-button">Button</a>
+  </div>
+</div>
+<div class="uq-alert" role="alert">
+  <div class="uq-alert__message">
+    <h3 class="uq-alert__title">Heading</h3>
+    <p>This is a default info alert</p>  
+  </div>
+</div>
+<br />
+
+<div class="uq-alert uq-alert--info uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global info alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+    <a href="javascript:void(0)" class="uq-alert__close">Close</a>
+  </div>
+</div>
+<div class="uq-alert uq-alert--success uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global success alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+    <a href="javascript:void(0)" class="uq-alert__close">Close</a>
+  </div>
+</div>
+<div class="uq-alert uq-alert--warning uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global warning alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+  </div>
+</div>
+<div class="uq-alert uq-alert--error uq-alert--dark uq-alert--global" role="alert">
+  <div class="uq-alert__container">
+    <div class="uq-alert__message">
+      <h3 class="uq-alert__title">Heading</h3>
+      <p>This is a global error alert</p>
+      <a href="#" title="Link" class="uq-button--inline">Link</a>
+    </div>
+  </div>
+</div>
+<br/>
 
 <!-- hero -->
 <div class="uq-hero">  
@@ -335,56 +416,7 @@
 </div>
 <!-- breadcrumb -->
 <div class="uq-site-header__breadcrumb-container">
-  <nav class="uq-breadcrumb uq-breadcrumb--1" aria-label="breadcrumb">
-    <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-      <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
-        <meta itemprop="position" content="1">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/information-and-services">Level one</a>
-        <meta itemprop="position" content="2">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/information-and-services/internet-and-wifi">Level two</a>
-        <meta itemprop="position" content="3">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        Welcome to the Kitchen Sink page
-        <meta itemprop="position" content="9">
-      </li>
-    </ol>
-  </nav>
-</div>
-<br/>
-
-<div class="uq-site-header__breadcrumb-container">
-  <nav class="uq-breadcrumb uq-breadcrumb--2" aria-label="breadcrumb">
-    <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-      <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
-        <meta itemprop="position" content="1">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/information-and-services">Egestas elementum adipiscing litora diam integer a a quam elementum nascetur</a>
-        <meta itemprop="position" content="2">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/information-and-services/internet-and-wifi">Condimentum adipiscing consectetur scelerisque blandit sed neque habitant vestibulum</a>
-        <meta itemprop="position" content="3">
-      </li>
-      <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-        Welcome to the Kitchen Sink page
-        <meta itemprop="position" content="9">
-      </li>
-    </ol>
-  </nav>
-</div>
-<br/>
-
-
-<div class="uq-site-header__breadcrumb-container">
-  <nav class="uq-breadcrumb uq-breadcrumb--3" aria-label="breadcrumb">
+  <nav class="uq-breadcrumb" aria-label="breadcrumb">
     <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
       <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
         <a class="uq-breadcrumb__link uq-breadcrumb__link--home" title="Home" href="/">Home</a>
@@ -426,6 +458,7 @@
 <!-- Typography -->
 <div class="uq-grid">
   <div class="uq-grid__col uq-grid__col--6">
+    <h2>Typography</h2>
     <h1>Heading level 1 (h1)</h1>
     <h2>Heading level 2 (h2)</h2>
     <h3>Heading level 3 (h3)</h3>
