--- a/packages/grid-menu/src/scss/_component.scss
+++ b/packages/grid-menu/src/scss/_component.scss
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   display: grid;
   font-family: core.$font-body;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
   list-style: none;
