--- a/packages/pane/src/scss/_component.scss
+++ b/packages/pane/src/scss/_component.scss
@@ -23,7 +23,7 @@
 .uq-pane {
   padding: core.$space-l; // 1.8rem;
   font-family: core.$font-body;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
   margin-bottom: core.$space-l; // 1.5rem;
