--- a/packages/footer/src/scss/_component.scss
+++ b/packages/footer/src/scss/_component.scss
@@ -7,7 +7,7 @@
   background: core.$uq-purple;
   box-sizing: border-box;
   font-family: core.$font-body;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
   color: #d4c8de;
