--- a/packages/accordion/src/scss/_component.scss
+++ b/packages/accordion/src/scss/_component.scss
@@ -11,7 +11,7 @@
 
 .uq-accordion {
   font-family: core.$font-body;
-  font-size: core.$font-size;
+  font-size: core.$font-size-m;
   font-weight: core.$font-weight-normal;
   line-height: core.$line-height;
   list-style: none;
@@ -157,7 +157,7 @@
   // Compact Modifier, reduces size for use in mixed components.
   &--compact {
     & .uq-accordion__toggle {
-      font-size: core.$font-size;
+      font-size: core.$font-size-m;
       padding: core.$space-s core.$space-xxxxl core.$space-s core.$space-m;
     }
 
