--- a/packages/footer-legacy/src/scss/_component.scss
+++ b/packages/footer-legacy/src/scss/_component.scss
@@ -36,7 +36,7 @@
     border-bottom: 1px solid rgba(core.$uq-white, 0.3);
     color: $site-footer-color;
     font-family: core.$merriweather;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
     font-style: italic;
     font-weight: core.$font-weight-normal;
     line-height: core.$line-height;
