--- a/packages/tabs/src/scss/_component.scss
+++ b/packages/tabs/src/scss/_component.scss
@@ -43,7 +43,7 @@
     flex: 0 1 auto;
     padding: core.$space-m core.$space-l;
     margin-right: core.$space-xs;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
     font-weight: core.$font-weight-thin;
     color: core.$uq-neutral-dark80;
     background-color: core.$uq-white;
@@ -96,7 +96,7 @@
   // tab panel
   &__tab-panel {
     padding: core.$space-m core.$space-l;
-    font-size: core.$font-size;
+    font-size: core.$font-size-m;
     color: core.$uq-neutral-dark80;
     background-color: core.$uq-white;
 
