add small margin when expanded to seperate breadcrumbs and increase legibility

--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -77,12 +77,16 @@
 
 
   &--expanded {
-    & .uq-breadcrumb__item { 
-      &:last-of-type {
-        white-space: normal;
-        text-overflow: unset;
-        overflow: visible;
-        flex: auto;
+    @media #{core.$screen-md-up} {
+      & .uq-breadcrumb__item { 
+        margin-bottom: 2px;
+
+        &:last-of-type {
+          white-space: normal;
+          text-overflow: unset;
+          overflow: visible;
+          flex: auto;
+        }
       }
     }
   }
