--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -2,7 +2,7 @@
 @use "@uqds/icon/src/scss/global" as icon;
 @import "global";
 
-// Breadcrumb
+// Breadcrumb - test
 .uq-breadcrumb {
   // Breadcrumb item
   &__list {
