Updated Global Navigation

--- a/packages/storybook-html/stories/components/header/header-interim.html
+++ b/packages/storybook-html/stories/components/header/header-interim.html
@@ -152,7 +152,7 @@
         <a class="uq-header__nav-secondary-link" href="https://alumni.uq.edu.au/giving">Give</a>
       </li>
       <li  class="uq-header__nav-secondary-item" data-gtm-category="Secondary header">
-        <a class="uq-header__nav-secondary-link" href="https://contacts.uq.edu.au">Contact</a>
+        <a class="uq-header__nav-secondary-link" href="https://contacts.uq.edu.au/contacts">Contact</a>
       </li>  
   </nav>
   <div class="uq-header__search" data-gtm-category="Search">
@@ -194,7 +194,7 @@
               <a href="https://alumni.uq.edu.au/giving" rel="external" class="uq-header__nav-secondary-link">Give</a>
           </li>
           <li class="uq-header__nav-secondary-item">
-            <a href="https://contacts.uq.edu.au" rel="external" class="uq-header__nav-secondary-link">Contact</a>
+            <a href="https://contacts.uq.edu.au/contacts" rel="external" class="uq-header__nav-secondary-link">Contact</a>
           </li>
       </ul>
     </nav>
