--- a/packages/storybook-html/stories/components/footer-legacy/footer.html
+++ b/packages/storybook-html/stories/components/footer-legacy/footer.html
@@ -33,7 +33,7 @@
                 <a href="https://www.uq.edu.au/terms-of-use/" rel="external" class="legacy-footer__footer-menu__link">Privacy &amp; Terms of use</a>
               </li>
               <li class="legacy-footer__footer-menu__item">
-                <a href="https://www.uq.edu.au/rti/" rel="external" class="legacy-footer__footer-menu__link">Right to Information</a>
+                <a href="https://governance-risk.uq.edu.au/rtip" rel="external" class="legacy-footer__footer-menu__link">Right to Information</a>
               </li>
               <li class="legacy-footer__footer-menu__item">
                 <a href="https://uq.edu.au/accessibility/" rel="external" class="legacy-footer__footer-menu__link">Accessibility</a>
