--- a/packages/storybook-html/stories/components/header-legacy/header_no-local-search.html
+++ b/packages/storybook-html/stories/components/header-legacy/header_no-local-search.html
@@ -23,7 +23,7 @@
         </div>
         <nav class="legacy-header__navigation">
             <ul class="legacy-header__navigation-container">
-                <li><a class="legacy-header__navigation-link" href="https://contacts.uq.edu.au/contacts">Contacts</a></li>
+                <li><a class="legacy-header__navigation-link" href="https://contacts.uq.edu.au/">Contacts</a></li>
                 <li><a class="legacy-header__navigation-link" href="https://future-students.uq.edu.au/">Study</a></li>
                 <li><a class="legacy-header__navigation-link" href="https://maps.uq.edu.au/">Maps</a></li>
                 <li><a class="legacy-header__navigation-link" href="https://www.uq.edu.au/news/">News</a></li>
