--- a/packages/breadcrumb/src/scss/_component.scss
+++ b/packages/breadcrumb/src/scss/_component.scss
@@ -82,3 +82,14 @@
     }
   }
 }
+
+.uq-breadcrumb__container {
+  border-bottom: 1px solid #e2e2e2;
+
+  & .uq-breadcrumb {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 73.25rem;
+  }
+}
+
