--- a/packages/storybook-html/stories/components/intro/kitchen-sink.html
+++ b/packages/storybook-html/stories/components/intro/kitchen-sink.html
@@ -32,7 +32,7 @@
     </div>
     <ul>
       <li data-gtm-category="Main navigation">
-        <a class="slide-menu__control" href="#">Study</a>
+        <a class="global-mobile-nav__audience-link slide-menu__control" href="#">Study</a>
         <ul>
           <li>
             <a href="/study/programs">Find a program</a>
@@ -73,7 +73,7 @@
         </ul>
       </li>
       <li data-gtm-category="Main navigation">
-        <a class="slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
+        <a class="global-mobile-nav__audience-link slide-menu__control" href="/admissions" aria-haspopup="true" aria-expanded="false">Admissions</a>
         <ul>
           <li>
             <a href="/admissions/undergraduate">Undergraduate</a>
@@ -102,7 +102,7 @@
         </ul>
       </li>
       <li data-gtm-category="Main navigation">
-        <a class="slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
+        <a class="global-mobile-nav__audience-link slide-menu__control" href="/university-life" aria-haspopup="true" aria-expanded="false">University life</a>
         <ul>
           <li>
             <a href="/university-life/living-in-brisbane">Living in Brisbane</a>
