moved breadcrumb container styles into breadcrumb. removed padding from default and added to when wrapped in container. updated examples

--- a/packages/storybook-html/stories/components/site-header/site-header-with-subnav.html
+++ b/packages/storybook-html/stories/components/site-header/site-header-with-subnav.html
@@ -117,22 +117,18 @@
           </ul>
         </nav>
       </div>
-      
     </div>
-    <div class="uq-site-header__breadcrumb-container" data-gtm-category="Breadcrumb navigation">
-      <nav class="uq-breadcrumb" aria-label="breadcrumb">
-        <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-          <li class="uq-breadcrumb__item uq-breadcrumb__item--home" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            <a class="uq-breadcrumb__link uq-breadcrumb__link--home" href="/">Home</a>
-            <meta itemprop="position" content="1">
+    <div class="uq-breadcrumb__container">
+      <nav class="uq-breadcrumb" aria-label="breadcrumb" data-gtm-category="Breadcrumb">
+        <ol class="uq-breadcrumb__list">
+          <li class="uq-breadcrumb__item">
+            <a class="uq-breadcrumb__link" href="/">Home</a>
           </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            <a class="uq-breadcrumb__link" itemprop="item" href="/information-and-services">Information and services</a>
-            <meta itemprop="position" content="2">
+          <li class="uq-breadcrumb__item">
+            <a class="uq-breadcrumb__link" href="/site-title">Site title</a>
           </li>
-          <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-            Internet and wifi
-            <meta itemprop="position" content="3">
+          <li class="uq-breadcrumb__item">
+            Study
           </li>
         </ol>
       </nav>
