--- a/packages/core/src/scss/_global.scss
+++ b/packages/core/src/scss/_global.scss
@@ -7,6 +7,11 @@
 @use "_partials/text-constants" as *;
 
 html {
+  font-size: 100%; /* 16px in most browsers */
+  font-family: $font-body;
+  font-weight: $font-weight-normal;
+  line-height: $line-height;
+  color: $text;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
