remove breadcrumb from site-header markup and add to basic page example

--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
@@ -1,20 +1,16 @@
 <nav class="uq-breadcrumb" aria-label="breadcrumb">
-  <ol class="uq-breadcrumb__list" itemscope="" itemtype="https://schema.org/BreadcrumbList">
-    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+  <ol class="uq-breadcrumb__list">
+    <li class="uq-breadcrumb__item">
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
-      <meta itemprop="position" content="1">
     </li>
-    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" title="Level one" href="/level-one">Level one</a>
-      <meta itemprop="position" content="2">
+    <li class="uq-breadcrumb__item">
+      <a class="uq-breadcrumb__link" title="Level one" href="/level-one">Level one</a>
     </li>
-    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
-      <a class="uq-breadcrumb__link" itemprop="item" title="Level two" href="/level-one/level-two">Level two</a>
-      <meta itemprop="position" content="3">
+    <li class="uq-breadcrumb__item">
+      <a class="uq-breadcrumb__link" title="Level two" href="/level-one/level-two">Level two</a>
     </li>
-    <li class="uq-breadcrumb__item" itemprop="itemListElement" itemscope="" itemtype="https://schema.org/ListItem">
+    <li class="uq-breadcrumb__item">
       Current page
-      <meta itemprop="position" content="4">
     </li>
   </ol>
 </nav>
