--- a/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
+++ b/packages/storybook-html/stories/components/breadcrumb/breadcrumb.html
@@ -4,10 +4,16 @@
       <a class="uq-breadcrumb__link" title="Home" href="/">Home</a>
     </li>
     <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Level one" href="/level-one">Level one</a>
+      <a class="uq-breadcrumb__link" title="Level one" href="/information-and-services">Level one</a>
     </li>
     <li class="uq-breadcrumb__item">
-      <a class="uq-breadcrumb__link" title="Level two" href="/level-one/level-two">Level two</a>
+      <a class="uq-breadcrumb__link" title="Level two" href="/information-and-services/internet-and-wifi">Level two</a>
+    </li>
+    <li class="uq-breadcrumb__item">
+      <a class="uq-breadcrumb__link" title="Bachelor of Business with a Major in Management or Finance" href="#">Bachelor of Business with a Major in Management or Finance</a>
+    </li>
+    <li class="uq-breadcrumb__item">
+      <a class="uq-breadcrumb__link" title="Major Leadership and Management Science" href="#">Major Leadership and Management Science</a>
     </li>
     <li class="uq-breadcrumb__item">
       Current page
